--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "nativewind": "^2.0.0-next.52",
     "react": "18.0.0",
     "react-native": "0.69.2"
   },
@@ -23,7 +24,8 @@
     "eslint": "^7.32.0",
     "jest": "^26.6.3",
     "metro-react-native-babel-preset": "^0.70.3",
-    "react-test-renderer": "18.0.0"
+    "react-test-renderer": "18.0.0",
+    "tailwindcss": "^3.1.6"
   },
   "jest": {
     "preset": "react-native",
