--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "scripts": {
     "android": "react-native run-android",
     "ios": "react-native run-ios",
+    "test:e2e": "detox test -c android",
     "start": "react-native start",
-    "test": "jest --watch",
-    "lint": "eslint ."
+    "test": "jest --watch"
   },
   "dependencies": {
     "nativewind": "^2.0.0-next.52",
@@ -21,8 +21,10 @@
     "@testing-library/jest-native": "^4.0.5",
     "@testing-library/react-native": "^10.1.1",
     "babel-jest": "^26.6.3",
+    "detox": "^19.8.1",
     "eslint": "^7.32.0",
     "jest": "^26.6.3",
+    "jest-circus": "^28.1.3",
     "metro-react-native-babel-preset": "^0.70.3",
     "react-test-renderer": "18.0.0",
     "tailwindcss": "^3.1.6"
