--- a/package.json
+++ b/package.json
@@ -5,9 +5,11 @@
   "scripts": {
     "android": "react-native run-android",
     "ios": "react-native run-ios",
-    "test:e2e": "detox test -c android",
     "start": "react-native start",
-    "test": "jest --watch"
+    "test": "jest --watch",
+    "test:e2e": "detox test -c android",
+    "detox:build": "detox build --configuration android",
+    "detox:test": "detox test --configuration android"
   },
   "dependencies": {
     "nativewind": "^2.0.0-next.52",
@@ -23,8 +25,7 @@
     "babel-jest": "^26.6.3",
     "detox": "^19.8.1",
     "eslint": "^7.32.0",
-    "jest": "^26.6.3",
-    "jest-circus": "^28.1.3",
+    "jest": "^28.1.3",
     "metro-react-native-babel-preset": "^0.70.3",
     "react-test-renderer": "18.0.0",
     "tailwindcss": "^3.1.6"
