--- a/.detoxrc.json
+++ b/.detoxrc.json
@@ -7,7 +7,7 @@
       "type": "ios.app",
       "binaryPath": "SPECIFY_PATH_TO_YOUR_APP_BINARY"
     },
-    "android": {
+    "android.debug": {
       "type": "android.apk",
       "binaryPath": "android/app/build/outputs/apk/debug/app-debug.apk",
       "build": "cd android && ./gradlew assembleDebug assembleAndroidTest -DtestBuildType=debug && cd .."
@@ -34,7 +34,7 @@
     },
     "android": {
       "device": "emulator",
-      "app": "android"
+      "app": "android.debug"
     }
   }
 }
