--- a/.detoxrc.json
+++ b/.detoxrc.json
@@ -5,7 +5,8 @@
   "apps": {
     "ios": {
       "type": "ios.app",
-      "binaryPath": "SPECIFY_PATH_TO_YOUR_APP_BINARY"
+      "binaryPath": "ios/build/Build/Products/Debug-iphonesimulator/rnApp.app",
+      "build": "xcodebuild -workspace ios/rnApp.xcworkspace -configuration Debug -scheme rnApp -sdk iphonesimulator -derivedDataPath ios/build"
     },
     "android.debug": {
       "type": "android.apk",
@@ -17,7 +18,7 @@
     "simulator": {
       "type": "ios.simulator",
       "device": {
-        "type": "iPhone 11"
+        "type": "iPhone 13"
       }
     },
     "emulator": {
