--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "babel-jest": "^26.6.3",
     "detox": "^19.8.1",
     "eslint": "^7.32.0",
+    "eslint-plugin-jest-formatting": "^3.1.0",
     "jest": "^28.1.3",
     "metro-react-native-babel-preset": "^0.70.3",
     "react-test-renderer": "18.0.0",
