--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "detox:test:ios": "detox test --configuration ios"
   },
   "dependencies": {
+    "classnames": "^2.3.1",
     "nativewind": "^2.0.0-next.52",
     "react": "18.0.0",
     "react-native": "0.69.2"
